Removed contacts from contact form that are no longer valid (all that are not @shift2bikes.com) + commented out “side bar”, which should be edited down the road but not yet removed.

--- a/site/themes/s2b_hugo_theme/static/css/style.default.css
+++ b/site/themes/s2b_hugo_theme/static/css/style.default.css
@@ -2540,6 +2540,14 @@ fieldset[disabled] .btn-template-primary.active {
   padding-left: 0;
   list-style: none;
 }
+
+#footer-ul li{
+  padding-left: 10px;
+  padding-right:10px;
+  text-transform: uppercase;
+  display: inline;
+
+}
 #footer ul a {
   color: #999999;
 }
